--- a/front/css/styles.css
+++ b/front/css/styles.css
@@ -9,7 +9,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #000000;
+      background: beige;
       border-radius: 20px;
       padding: 30px;
       margin: 50px auto;
