--- a/front/css/styles.css
+++ b/front/css/styles.css
@@ -42,3 +42,28 @@
  .contactForm{
   background: #fff;
  }
+ 
+ .card-img-top {
+  width: 100%;
+  height: 300px;          /* Altura fija */
+  object-fit: contain;     /* La imagen completa dentro del área */
+  background-color: #f8f9fa; /* Color de fondo si no ocupa todo el espacio */
+}
+
+.card-body {
+  height: 150px;           /* Altura fija para el contenido */
+  display: flex;
+  flex-direction: column;
+}
+
+.card-footer {
+  display: flex;
+  width: 100%;
+}
+
+.card-footer > div {
+  width: 50%;                  /* Cada uno ocupa la mitad */
+  display: flex;
+  justify-content: center;      /* Centrado horizontal */
+  align-items: center;          /* Centrado vertical */
+}
