--- a/front/css/styles.css
+++ b/front/css/styles.css
@@ -42,6 +42,10 @@
  .contactForm{
   background: #fff;
  }
+
+ .loginForm{
+  background: #fff;
+ }
  
  .card-img-top {
   width: 100%;
@@ -121,4 +125,15 @@
 .carousel-item img {
 
   height: 650px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #28a745; /* ejemplo */
+  color: white;
+  text-align: center;
+  padding: 1rem;
 }
